# monocle

./: Cargo.toml
crates/monocle_cli/: Cargo.toml
crates/monocle_cli/benches/: ping.rs
crates/monocle_cli/src/: lib.rs  main.rs  runserver.rs
crates/monocle_cli/src/router/: mod.rs
crates/monocle_cli/src/test/: mod.rs
crates/monocle_cli/tests/: smoketest.rs
