[package]
name = "monocle_cli"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros"] }
axum-test = "16.4.1"
clap = { workspace = true, features = ["derive", "env"] }
color-eyre.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
criterion = { workspace = true, features = [
    "async",
    "async_tokio",
    "html_reports",
] }

[[bench]]
name = "ping"
harness = false
